Add static validation to heating-cooling-system
Need to do number based validation in heating and cooling

Need to do Add distribution system validataion

--- a/HEScoreMicro.UI/src/app/views/zones/zone-floor/zone-floor.component.html
+++ b/HEScoreMicro.UI/src/app/views/zones/zone-floor/zone-floor.component.html
@@ -92,7 +92,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6" *ngIf="foundationItem.get('typeStatus')?.value?.slab">
+            <div class="col-md-6" *ngIf="foundationItem.get('tracker')?.value?.slab">
               <div class="input-box">
                 <label class="required" for="slabInsulationLevel"> Slab Insulation Level </label>
                 <input
@@ -118,7 +118,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6" *ngIf="foundationItem.get('typeStatus')?.value?.floor">
+            <div class="col-md-6" *ngIf="foundationItem.get('tracker')?.value?.floor">
               <div class="input-box">
                 <label class="required" for="floorInsulationLevel">
                   Floor Insulation Level
@@ -146,7 +146,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6" *ngIf="foundationItem.get('typeStatus')?.value?.wall">
+            <div class="col-md-6" *ngIf="foundationItem.get('tracker')?.value?.wall">
               <div class="input-box">
                 <label class="required" for="foundationwallsInsulationLevel">
                   Foundationwalls Insulation Level
