FIX HPXML Generation issues
Add dynamic option loading in wall,window

--- a/HEScoreMicro.UI/src/app/views/systems/heating-cooling-system/heating-cooling-system.component.html
+++ b/HEScoreMicro.UI/src/app/views/systems/heating-cooling-system/heating-cooling-system.component.html
@@ -324,7 +324,12 @@
                     Cooling System Efficiency Unit
                   </label>
                   <ng-select
-                    [items]="coolingEfficiencyUnitOptions"
+                    [items]="
+                      systemItem.get('coolingSystemType')?.value ===
+                      'Room air conditioner'
+                        ? eerCoolingEfficiencyUnitOptions
+                        : seerCoolingEfficiencyUnitOptions
+                    "
                     bindLabel="name"
                     [clearable]="true"
                     [closeOnSelect]="true"
